[project]
name = "measurement"
version = "0.1.0"
description = "Top domain list measurement reproducibility project CS 445 Winter 2026"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "arrow>=1.4.0",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "pyrefly>=0.41.1",
    "ruff>=0.14.4",
]

[tool.ruff]
line-length = 120

